# auxjad-template-project

./: .gitignore  Makefile  README.md  README.rst  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: github-actions.yml
src/: README.rst  requirements.txt  title.py
src/config/: config.toml
src/materials/: __init__.py  make_material_A.py  make_material_B.py  make_material_C.py  material_A_definitions.py  material_B_definitions.py  material_C_definitions.py
src/score_maker/: __init__.py  add_final_bar_line.py  add_initial_clefs.py  add_initial_tempo.py  add_instrument_names.py  add_large_time_signatures.py  add_misc_tweaks.py  add_tempo_and_final_tweaks.py  compile_ly_file.py  create_staves.py  final_tweaks.py  generate_and_add_segments_to_staves.py  generate_lilypond_file_structure.py  generate_materials.py  generate_segments.py  main.py  prettify_score.py  print_header.py  score_maker.py  stylesheet_generator.py
src/segments/: __init__.py  make_segment_01.py  make_segment_02.py  make_segment_03.py  make_segment_A.py  make_segment_B.py  make_segment_C.py  segment_01_definitions.py  segment_02_definitions.py  segment_03_definitions.py
src/title/: __init__.py
src/title/config/: config.toml
src/title/includes/: stylesheet.ily
src/title/materials/: __init__.py  material_A.py
src/title/score_maker/: __init__.py  add_initial_clefs.py  add_instrument_names.py  auxiliary_score_maker_functions.py  compile_ly_file.py  create_staves.py  main.py  stylesheet_generator.py
src/title/segments/: __init__.py  make_segment_A.py  make_segment_B.py  make_segment_C.py  segment_factory.py
src/title/tools/: __init__.py
src/utils/: __init__.py  add_final_bar_line.py  add_initial_clefs.py  add_initial_tempo.py  add_large_time_signatures.py  add_miscellaneous_tweaks.py  load_config.py  print_header.py
title/: README.md  README.rst  requirements.txt  title.py
title/src/config/: config.toml
title/src/materials/: __init__.py  make_material_A.py  make_material_C.py  material_A.py  material_B.py  material_C.py  material_C_definitions.py
title/src/score_maker/: __init__.py  add_initial_clefs.py  add_instrument_names.py  add_large_time_signatures.py  add_tempo_and_final_tweaks.py  compile_ly_file.py  create_staves.py  generate_and_add_segments_to_staves.py  generate_lilypond_file_structure.py  generate_materials.py  generate_segments.py  main.py  make_score.py  prettify_score.py  score_maker.py  stylesheet_generator.py
title/src/segments/: __init__.py  make_segment_01.py  make_segment_02.py  make_segment_03.py  make_segment_A.py  make_segment_B.py  make_segment_C.py  segment_03_definitions.py  segment_factory.py
title/src/tools/: __init__.py
title/src/utils/: __init__.py  load_config.py
