[project]
name = "auxjad-template-project"
dynamic = ["dependencies"]
version = "1.0.0"
description = "Template for projects using Auxjad and Abjad."
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.10"

[[project.authors]]
name = "Gilberto Agostinho"
email = "gilbertohasnofb@gmail.com"

[project.urls]
homepage = "https://github.com/gilbertohasnofb/auxjad-template-project"
source = "https://github.com/gilbertohasnofb/auxjad-template-project"

[tool.pytest.ini_options]
pythonpath = "title"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
line_length = 100
multi_line_output = 3
skip_gitignore = true
include_trailing_comma = true
use_parentheses = true

[tool.pydocstyle]
match_dir = "title"
select = ["D101", "D102", "D103", "D105", "D300", "D301"]