[project]
name = "auxjad-template-project"
description = "Template for projects using Auxjad and Abjad."
authors = [{name = "Gilberto Agostinho", email = "gilbertohasnofb@gmail.com"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
version = "1.0.0"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/gilbertohasnofb/auxjad-template-project"
documentation = "https://github.com/gilbertohasnofb/auxjad-template-project"
source = "https://github.com/gilbertohasnofb/auxjad-template-project"

[tool.pytest.ini_options]
pythonpath = "title"

[tool.setuptools.dynamic]
dependencies = {file = ["title/requirements.txt"]}

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
line_length = 100
multi_line_output = 3
skip_gitignore = true
include_trailing_comma = true
use_parentheses = true

[tool.pydocstyle]
match_dir = "title"
select = ["D101", "D102", "D103", "D105", "D300", "D301"]