[project]
name = "auxjad-template-project"
description = "Template for projects using Auxjad and Abjad."
authors = [{name = "Gilberto Agostinho", email = "gilbertohasnofb@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
version = "1.0.0"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/gilbertohasnofb/auxjad-template-project"
documentation = "https://github.com/gilbertohasnofb/auxjad-template-project"
source = "https://github.com/gilbertohasnofb/auxjad-template-project"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.test = {file = ["requirements-test.txt"]}

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
case_sensitive = true
skip_gitignore = true

[tool.pydocstyle]
select = ["D101", "D102", "D103", "D105", "D300", "D301"]